Add Basic User Authentication (#8)
* Update URL Entity PKG

* Add User Table For JWT Auth

* Start Working With User Auth DDD

* Add Pull Request Template
