# api/routes/router.go
@@ -1,13 +1,15 @@
-package api
+package routes
 
 import (
 	"fmt"
 
+	"github.com/RyanDerr/GoShorty/api/middleware"
 	"github.com/RyanDerr/GoShorty/internal/domain/handler"
 	"github.com/RyanDerr/GoShorty/internal/domain/repository"
 	"github.com/RyanDerr/GoShorty/internal/domain/service"
 	"github.com/gin-gonic/gin"
 	"github.com/redis/go-redis/v9"
+	"gorm.io/gorm"
 )
 
 const (
@@ -15,6 +17,9 @@ const (
 	UrlRoute  = "/url"
 	Shorten   = "/shorten"
 	Resolve   = "/:short"
+	AuthRoute = "/auth"
+	Register  = "/register"
+	Login     = "/login"
 )
 
 //	@title			GoShorty API
@@ -24,18 +29,24 @@ const (
 //	@schemes		http
 //	@schemes		https
 //	@description	This is the API for GoShorty, a URL shortening service
-func SetupRouter(redis *redis.Client) *gin.Engine {
+func SetupRouter(redis *redis.Client, db *gorm.DB) *gin.Engine {
 	router := gin.Default()
-	urlRepo := repository.NewUrlRepository(redis)
-	urlService := service.NewShortenUrlService(urlRepo)
-	urlHandler := handler.NewUrlHandler(urlService)
+
+	userHandler, urlHandler := setupHandlers(redis, db)
 
 	urlRoute := GetUrlRoute()
+	authRoute := GetAuthRoute()
 
-	url := router.Group(urlRoute)
+	authenticate := router.Group(authRoute)
 	{
-		url.POST(Shorten, urlHandler.ShortenUrl)
-		url.GET(Resolve, urlHandler.ResolveUrl)
+		authenticate.POST(Register, userHandler.RegisterUser)
+		authenticate.POST(Login, userHandler.LoginUser)
+	}
+
+	shorten := router.Group(urlRoute).Use(middleware.JWTAuthMiddleware())
+	{
+		shorten.POST(Shorten, urlHandler.ShortenUrl)
+		shorten.GET(Resolve, urlHandler.ResolveUrl)
 	}
 
 	return router
@@ -45,10 +56,47 @@ func GetUrlRoute() string {
 	return fmt.Sprintf("%s%s", BaseRoute, UrlRoute)
 }
 
+func GetAuthRoute() string {
+	return fmt.Sprintf("%s%s", BaseRoute, AuthRoute)
+}
+
 func GetShortenRoute() string {
 	return fmt.Sprintf("%s%s", GetUrlRoute(), Shorten)
 }
 
 func GetResolveRoute() string {
 	return fmt.Sprintf("%s%s", GetUrlRoute(), Resolve)
+}
+
+func GetRegisterRoute() string {
+	return fmt.Sprintf("%s%s", GetAuthRoute(), Register)
+}
+
+func GetLoginRoute() string {
+	return fmt.Sprintf("%s%s", GetAuthRoute(), Login)
+}
+
+func setupHandlers(redis *redis.Client, db *gorm.DB) (*handler.UserHandler, *handler.UrlHandler) {
+	userService, urlService := setupServices(redis, db)
+
+	userHandler := handler.NewUserHandler(userService)
+	urlHandler := handler.NewUrlHandler(urlService)
+
+	return userHandler, urlHandler
+}
+
+func setupServices(redis *redis.Client, db *gorm.DB) (*service.UserService, *service.ShortenUrlService) {
+	userRepo, urlRepo := setupRepositories(redis, db)
+
+	userService := service.NewUserService(userRepo)
+	urlService := service.NewShortenUrlService(urlRepo)
+
+	return userService, urlService
+}
+
+func setupRepositories(redis *redis.Client, db *gorm.DB) (*repository.UserRepository, *repository.UrlRepository) {
+	userRepo := repository.NewUserRepository(db)
+	urlRepo := repository.NewUrlRepository(redis)
+
+	return userRepo, urlRepo
 }
