# internal/domain/entity/user.go
@@ -1,0 +1,11 @@
+package entity
+
+import (
+	"gorm.io/gorm"
+)
+
+type User struct {
+	gorm.Model
+	Username string `gorm:"size:255;not null;unique" json:"username"`
+	Password string `gorm:"size:255;not null" json:"-"`
+}
