# pkg/response/user.go
@@ -1,0 +1,6 @@
+package response
+
+type UserResponse struct {
+	Id       uint   `json:"id"`
+	Username string `json:"username"`
+}
